<package>
  <name>ball_tracker</name>
  <version>0.0.1</version>
  <description>
    Given an image, output location and velocity of red ball.
  </description>
  <license>MIT</license>
  <maintainer email="jtb2013@gmail.com">James Bell</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pv_estimator</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pv_estimator</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>rospy</run_depend>
</package>


